--- a/test/resources/services.yaml
+++ b/test/resources/services.yaml
@@ -14,8 +14,7 @@ services:
 #       name: DCTB
   monitoring:
     chain:
-     - class: org.jlab.clara.clas12.dc.monitor.DcTimeLineEngine
-       name: DCMON
+     - class: org.jlab.clara.clas12.dc.monitor.DcMonitorEngine       name: DCMON
 
 mime-types:
   - binary/data-hipo
